Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/Reward_Configuration__c.object-meta.xml
<CustomObject>
    <label>Reward Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>