Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/fields/Required_Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Required_Reward_Points__c</fullName>
    <label>Required Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>