Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/fields/Reward_Description__c.field-meta.xml
<CustomField>
    <fullName>Reward_Description__c</fullName>
    <label>Reward Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>