Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/fields/Reward_Image__c.field-meta.xml
<CustomField>
    <fullName>Reward_Image__c</fullName>
    <label>Reward Image</label>
    <type>Url</type>
</CustomField>