Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon Voucher</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>