Reward And Recognition System 2.0/force-app/main/default/objects/Reward_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Required_Reward_Points__c</columns>
    <columns>Reward_Description__c</columns>
    <columns>Reward_Image__c</columns>
    <columns>Reward_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>